--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -16,5 +16,6 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Restore dependencies
+        working-directory: ./src
         run: dotnet restore
 
