--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -18,4 +18,7 @@ jobs:
       - name: Restore dependencies
         working-directory: ./src
         run: dotnet restore
+      - name: Build
+        working-directory: ./src
+        run: dotnet build --no-restore
 
