--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -4,18 +4,18 @@ on:
     branches:
       - master # or the name of your main branch
 
-jobs:
-  build:
-    name: Build
-    runs-on: windows-latest
-    steps:
+# jobs:
+#   build:
+#     name: Build
+#     runs-on: windows-latest
+#     steps:
       # - name: Set up JDK 11
       #   uses: actions/setup-java@v1
       #   with:
       #     java-version: 1.11
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      # - uses: actions/checkout@v2
+      #   with:
+      #     fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       # - name: Cache SonarQube packages
       #   uses: actions/cache@v1
       #   with:
@@ -60,10 +60,32 @@ jobs:
       #     projectname: 'SecureBank'
       #     projectversion: 'master'
       #     apikey: ${{ secrets.DEPENDENCYTRACK_APIKEY }}
-      - name: Semgrep scan
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip
-          pip install semgrep
-          semgrep ci --json
+      # - name: Semgrep scan
+      #   shell: bash
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install semgrep
+      #     semgrep ci --json
 
+jobs:
+  semgrep:
+    # User-definable name of this GitHub Actions job:
+    name: Scan
+    # If you are self-hosting, change the following `runs-on` value: 
+    runs-on: ubuntu-latest
+
+    container:
+      # A Docker image with Semgrep installed. Do not change this.
+      image: returntocorp/semgrep
+
+    # Skip any PR created by dependabot to avoid permission issues:
+    if: (github.actor != 'dependabot[bot]')
+
+    steps:
+      # Fetch project source with GitHub Actions Checkout.
+      - uses: actions/checkout@v3
+      # Run the "semgrep ci" command on the command line of the docker image.
+      - run: semgrep ci
+        env:
+           # Add the rules that Semgrep uses by setting the SEMGREP_RULES environment variable. 
+           SEMGREP_RULES: p/default # more at semgrep.dev/explore
