--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -85,7 +85,7 @@ jobs:
       # Fetch project source with GitHub Actions Checkout.
       - uses: actions/checkout@v3
       # Run the "semgrep ci" command on the command line of the docker image.
-      - run: semgrep ci --json --no-error
+      - run: semgrep --config=auto --json > semgrep.json
         env:
            # Add the rules that Semgrep uses by setting the SEMGREP_RULES environment variable. 
            SEMGREP_RULES: p/default # more at semgrep.dev/explore
