--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -92,3 +92,4 @@ jobs:
       - shell: bash
         run: |
           cat semgrep.json
+          curl -X POST "https://${{ secrets.DJ_URL }}/api/v2/import-scan/" -H  "accept: application/json" -H  "Content-Type: multipart/form-data"  -H "Authorization: Token ${{ secrets.DJ_TOKEN }}" -F "minimum_severity=Info" -F "active=true" -F "verified=true" -F "scan_type=Semgrep JSON Report" -F "close_old_findings=false" -F "push_to_jira=false" -F "product_name=${{ secrets.DJ_PRODUCT }}" -F "scan_date=$(date +%Y-%m-%d)" -F "engagement_name=$(date +%Y-%m)"
