--- a/.github/workflows/appscan.yml
+++ b/.github/workflows/appscan.yml
@@ -84,6 +84,7 @@ jobs:
     steps:
       # Fetch project source with GitHub Actions Checkout.
       - uses: actions/checkout@v3
+      - run: sudo apt install curl
       # Run the "semgrep ci" command on the command line of the docker image.
       - run: semgrep --config=auto --json > semgrep.json
         env:
